--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/wwwroot/css/menu.css
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/wwwroot/css/menu.css
@@ -53,6 +53,10 @@
 
 .menu-item-content{
     border: solid 1px #ddd;
-    height:30px;
+    height:40px;
     padding: 5px 5px;
+}
+
+.ncc-menu-title{
+    padding-left:10px;
 }
