--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
@@ -43,8 +43,8 @@
 </div>
 
 @section Scripts{
-    <link href="~/lib/datatables/dataTables.bootstrap.css" rel="stylesheet" />
-    <link href="~/lib/datatables/jquery.dataTables.min.css" rel="stylesheet" />
-    <script src="~/lib/datatables/jquery.dataTables.min.js"></script>
-    <script src="~/lib/datatables/dataTables.bootstrap.min.js"></script>    
+    <link href="~/lib/DataTables/dataTables.bootstrap.css" rel="stylesheet" />
+    <link href="~/lib/DataTables/jquery.dataTables.min.css" rel="stylesheet" />
+    <script src="~/lib/DataTables/jquery.dataTables.min.js"></script>
+    <script src="~/lib/DataTables/dataTables.bootstrap.min.js"></script>    
 }
