page title and subtitle added

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
@@ -3,6 +3,8 @@
 @model List<NccPage>
 @{
     Layout = Constants.AdminLayoutName;
+    ViewData["PageTitle"] = "Page Manage";
+    ViewData["PageSubtitle"] = "View and manage all existing pages";
 }
 
 <script src="~/lib/ckeditor/ckeditor.js"></script>
