constructing menu tree.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
@@ -26,7 +26,7 @@
 
         <div class="panel-body">
             <ul id="selectedMenuTree">
-                <li class="list-group-item no-boarder" ncc-model-id="0" ncc-menu-action-type="Url" ncc-controller="CmsHome" ncc-action="Index" name="Home">
+                <li class="list-group-item no-boarder" ncc-menu-item-id="0" ncc-menu-item-action-type="Url" ncc-menu-item-controller="CmsHome" ncc-menu-item-action="Index" ncc-menu-item-action-data="" ncc-menu-item-url="" ncc-menu-item-target="" ncc-menu-item-order="1" ncc-menu-item-title="Home">
                     <div class="menu-item-content">
                         <div class="pull-left" style="padding: 5px 5px;">
                             <i class="glyphicon glyphicon-move margin-right-10"></i>
