menu tree json successfully submitted to controller action.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
@@ -4,6 +4,7 @@
         <div class="panel-heading">
             <div class="col-sm-12">
                 <div class="col-sm-6" style="padding-right:0px;">
+                    <input type="hidden" id="menuId" name="menuId" value="0"/>
                     <input type="text" id="menuName" class="form-control input-sm" placeholder="Enter Menu Name" />
                 </div>
                 <div class="col-sm-4">
@@ -26,7 +27,7 @@
 
         <div class="panel-body">
             <ul id="selectedMenuTree">
-                <li class="list-group-item no-boarder" ncc-menu-item-id="0" ncc-menu-item-action-type="Url" ncc-menu-item-controller="CmsHome" ncc-menu-item-action="Index" ncc-menu-item-action-data="" ncc-menu-item-url="" ncc-menu-item-target="" ncc-menu-item-order="1" ncc-menu-item-title="Home">
+                <li class="list-group-item no-boarder" ncc-menu-item-id="0" ncc-menu-item-action-type="Url" ncc-menu-item-controller="CmsHome" ncc-menu-item-action="Index" ncc-menu-item-action-data="" ncc-menu-item-url="/CmsHome" ncc-menu-item-target="" ncc-menu-item-order="1" ncc-menu-item-title="Home">
                     <div class="menu-item-content">
                         <div class="pull-left" style="padding: 5px 5px;">
                             <i class="glyphicon glyphicon-move margin-right-10"></i>
