--- a/NetCoreCMS.Web/Views/Shared/_SettingsLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_SettingsLayout.cshtml
@@ -38,6 +38,7 @@
 
 </head>
 <body>
+    <div id="loadingMask" class="loader loader-double"></div>
     <div id="wrapper">
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -141,6 +142,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         @*<h1 class="page-header">Blank</h1>*@
+                        <div id="messageContainer"></div>
                         @RenderBody()
                     </div>
                     <!-- /.col-lg-12 -->
@@ -167,6 +169,7 @@
     <script src="~/js/metisMenu.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="~/js/sb-admin-2.min.js"></script>
+    <script src="/js/common.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
