added loading mask

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
@@ -6,10 +6,10 @@
                 <div class="col-sm-6" style="padding-right:0px;">
                     <input type="hidden" id="menuId" name="menuId" value="0"/>
                     <input type="text" id="menuName" class="form-control input-sm" placeholder="Enter Menu Name" />
-                </div>
+                </div>                 
                 <div class="col-sm-4">
                     <select id="menuLocation" class="form-control input-sm">
-                        <option value="">Select Menu Location</option>
+                        <option value="">Menu Location</option>
                         <option value="Top">Top</option>
                         <option value="Navigation">Navigation</option>
                         <option value="Left">Left</option>
