--- a/NetCoreCMS.Web/Views/Shared/_SettingsLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_SettingsLayout.cshtml
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="~/css/sb-admin-2.min.css">
     <!-- Custom Fonts -->
     <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/font-awesome.min.css">
+    
+    <link href="~/lib/css-loader/dist/css-loader.css" rel="stylesheet" />
 
     @* NEED TO CHECK WHAT IS THIS *@
     @*@Html.Raw(JavaScriptSnippet.FullScript)*@
