--- a/NetCoreCMS.Web/Views/Shared/_SettingsLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_SettingsLayout.cshtml
@@ -144,7 +144,16 @@
                 <div class="row">
                     <div class="col-lg-12">
                         @*<h1 class="page-header">Blank</h1>*@
-                        <div id="messageContainer"></div>
+                        <div id="messageContainer">
+                            @if (TempData.ContainsKey("ErrorMessage"))
+                            {
+                                <div class="alert alert-danger alert-dismissable">@TempData["ErrorMessage"]<a href="#" class="close" data-dismiss="alert" aria-label="close">×</a></div>
+                            }
+                            @if (TempData.ContainsKey("SuccessMessage"))
+                            {
+                                <div class="alert alert-success alert-dismissable">@TempData["SuccessMessage"]<a href="#" class="close" data-dismiss="alert" aria-label="close">×</a></div>
+                            }
+                        </div>
                         @RenderBody()
                     </div>
                     <!-- /.col-lg-12 -->
