Settings marged into admin. And admin theme support has been removed.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using NetCoreCMS.Framework.Core.Models
+@using NetCoreCMS.Framework.Utility
+@using NetCoreCMS.Framework.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
