--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using NetCoreCMS.Framework.Utility
 @{
-    Layout = Constants.SettingsLayoutName;
+    Layout = Constants.AdminLayoutName;
 }
 
 <ol class="breadcrumb">
