--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Index.cshtml
@@ -1,111 +1,165 @@
 ﻿@using NetCoreCMS.Framework.Utility
+@using NetCoreCMS.Framework.Core
+@model NccWebSite
 @{
     Layout = Constants.AdminLayoutName;
 }
 
-<h1> Holaaaaaaaaa </h1>
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+<h1> @NccInfo.Name Settings </h1>
 
 <div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run & Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
-</div>
+    <form class="form-horizontal" asp-controller="Settings" asp-action="Index" method="post">
+        <span asp-validation-summary="ValidationSummary.All" class="text-danger"></span>
+        <input type="hidden" class="form-control" id="Id" name="Id" asp-for="Id" >
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="SiteName">Site Name:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="Name" name="Name" asp-for="Name" placeholder="Enter Site Name">
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+        </div>
+        
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="SiteTitle">Site Title:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="SiteTitle" name="SiteTitle" asp-for="SiteTitle" placeholder="Enter Site Title">
+                <span asp-validation-for="SiteTitle" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="Tagline">Tagline:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="Tagline" name="Tagline" asp-for="Tagline" placeholder="Enter Tagline">
+                <span asp-validation-for="Tagline" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="FaviconUrl">Favicon URL:</label>
+            <div class="col-sm-10">
+                <input asp-for="FaviconUrl" type="text" class="form-control" id="FaviconUrl" name="FaviconUrl" placeholder="Enter Favicon Url">
+                <span asp-validation-for="FaviconUrl" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="SiteLogoUrl">Site Logo URL:</label>
+            <div class="col-sm-10">
+                <input asp-for="SiteLogoUrl" type="text" class="form-control" id="SiteLogoUrl" name="SiteLogoUrl" placeholder="Enter Site Logo Url">
+                <span asp-validation-for="SiteLogoUrl" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="DomainName">Website URL:</label>
+            <div class="col-sm-10">
+                <input asp-for="DomainName" type="text" class="form-control" id="DomainName" name="DomainName" placeholder="Enter Website URL">
+                <span asp-validation-for="DomainName" class="text-danger"></span>
+            </div>
+        </div>
+        
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="Email">Email:</label>
+            <div class="col-sm-10">
+                <input asp-for="EmailAddress" type="Email" class="form-control" id="EmailAddress" name="EmailAddress" placeholder="Enter Email">
+                <span asp-validation-for="EmailAddress" class="text-danger"></span>
+            </div>
+        </div>
+        
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="Email">Allow User Registration:</label>
+            <div class="col-sm-10">
+                <input asp-for="AllowRegistration" type="checkbox" class="form-control" id="AllowRegistration" name="AllowRegistration" >
+                <span asp-validation-for="AllowRegistration" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="SetupTemplate">New User Role:</label>
+            <div class="col-sm-10">
+                <select asp-for="NewUserRole" type="text" class="form-control" id="NewUserRole" name="NewUserRole">
+                    <option value="">Select new user role</option>
+                    <option value="Administrator">Administrator</option>
+                    <option value="Author">Author</option>
+                    <option value="Editor">Editor</option>
+                    <option value="Reader">Reader</option>
+                    <option value="Subscriber">Subscriber</option>                    
+                </select>
+                <span asp-validation-for="NewUserRole" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="TimeZone">TimeZone:</label>
+            <div class="col-sm-10">
+                <select asp-for="TimeZone" type="text" class="form-control" id="TimeZone" name="TimeZone">
+                    <option value="">Select TimeZone</option>
+                    <option value="UTC_6">UTC +6</option>
+                    <option value="UTC_1">UTC 1</option>                    
+                </select>
+                <span asp-validation-for="TimeZone" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="Language">Language:</label>
+            <div class="col-sm-10">
+                <select asp-for="Language" type="text" class="form-control" id="Language" name="Language">
+                    <option value="">Select Language</option>
+                    <option value="en_US">English US</option>
+                    <option value="bn_BD">Bangla BD</option>
+                </select>
+                <span asp-validation-for="Language" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="DateFormat">Date Format:</label>
+            <div class="col-sm-10">
+                <input asp-for="DateFormat" type="text" class="form-control" id="DateFormat" name="DateFormat">
+                <span asp-validation-for="DateFormat" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="TimeFormat">Time Format:</label>
+            <div class="col-sm-10">
+                <input asp-for="TimeFormat" type="text" class="form-control" id="TimeFormat" name="TimeFormat">
+                <span asp-validation-for="TimeFormat" class="text-danger"></span>
+            </div>
+        </div>
+         
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="Copyrights">Copyrights:</label>
+            <div class="col-sm-10">
+                <input asp-for="Copyrights" type="text" class="form-control" id="Copyrights" name="Copyrights">
+                <span asp-validation-for="Copyrights" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="PrivacyPolicyUrl">Privacy Policy URL:</label>
+            <div class="col-sm-10">
+                <input asp-for="PrivacyPolicyUrl" type="text" class="form-control" id="PrivacyPolicyUrl" name="PrivacyPolicyUrl">
+                <span asp-validation-for="PrivacyPolicyUrl" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="TermsAndConditionsUrl">Terms and Conditions URL:</label>
+            <div class="col-sm-10">
+                <input asp-for="TermsAndConditionsUrl" type="text" class="form-control" id="TermsAndConditionsUrl" name="TermsAndConditionsUrl">
+                <span asp-validation-for="TermsAndConditionsUrl" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="reset" class="btn btn-default">Clear</button>
+            </div>
+        </div>
+
+    </form>
+</div>  
+       
