--- a/NetCoreCMS.Web/Themes/Default/Shared/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/_SiteLayout.cshtml
@@ -49,7 +49,7 @@
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+    <div class="container body-content" style="margin-top:50px;">
         @RenderBody()
         <hr />
         <footer>
