fontend design working

--- a/NetCoreCMS.Web/Themes/Default/Shared/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/_SiteLayout.cshtml
@@ -13,7 +13,7 @@
     <title>@ViewData["Title"] - NetCoreCMS Frontend</title>
         
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/Theme/Default/css/site.css" />
     <link href="~/lib/css-loader/dist/css-loader.css" rel="stylesheet" />
         
     @Html.Raw(JavaScriptSnippet.FullScript)
@@ -49,7 +49,7 @@
             </div>
         </div>
     </nav>
-    <div class="container body-content" style="margin-top:50px;">
+    <div class="container body-content topMargin">
         @RenderBody()
         <hr />
         <footer>
